kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-server
  namespace: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: my-web-server
  template:
    metadata:
      labels:
        app: my-web-server
    spec:
      nodeSelector:
        homework: "true"
      volumes:
      - name: shared-volume
        emptyDir: {}
      containers:
      - name: web-server
        image: nginx
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: shared-volume
          mountPath: /homework
        lifecycle:
          preStop:
            exec:
              command: ['sh', '-c', 'rm /homework/index.html']
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
            command: ['sh', '-c', 'test -e /homework/index.html']
          initialDelaySeconds: 5
          periodSeconds: 5
