kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web-server-service
  namespace: homework
spec:
  selector:
    app: my-web-server
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
